--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
 
     <!-- Offers Section -->
     <section class="offers">
-        <h2>Offres Capsulait</h2>
+        <h2>Offres Instant fondu</h2>
         <div class="offers-grid">
             <div class="offer-card">
                 <h3>Jusqu'à 30% de réduction</h3>
@@ -1063,7 +1063,7 @@
         <div class="promo-card promo-left">
             <div class="promo-text">
                 <h2>Savourez l'excellence à prix exceptionnel</h2>
-                <p>Profitez d'offres exclusives sur nos machines Capsulait, Original, Absolu, Créatif et Alessi. Le fromage parfait, à votre style et à votre goût.</p>
+                <p>Profitez d'offres exclusives sur nos machines instant fondu, Original, Absolu, Créatif et Alessi. Le fromage parfait, à votre style et à votre goût.</p>
                 <p>l'appareil Capsulait : une machine élégante et intuitive qui transforme les capsules en fromage prêt à déguster.</p>
                 <button class="btn-gold">J'en profite →</button>
             </div>
@@ -1081,7 +1081,7 @@
             </div>
             <div class="promo-text">
                 <h2>Notre sélection de saison</h2>
-                <p>Calendrier de l'Avent, Pumpkin Spice, Popping Pearls : célébrez la saison avec les éditions limitées Capsulait.</p>
+                <p>Calendrier de l'Avent, Pumpkin Spice, Popping Pearls : célébrez la saison avec les éditions limitées Instant fondu.</p>
                 <button class="btn-gold">Je découvre →</button>
             </div>
         </div>
@@ -1382,7 +1382,7 @@
             <img src="fondue-savoyarde-1200.jpg" alt="Machine Capsulait">
         </div>
         <div class="blog-content">
-            <h2>Plongez au cœur de l'univers Capsulait</h2>
+            <h2>Plongez au cœur de l'univers Instant fondu</h2>
             <p>Laissez-vous inspirer par nos articles mêlant recettes originales, conseils de nos Baristas et pour tout savoir sur notre savoir-faire. Découvrez comment nous élaborons nos mélanges et œuvrons chaque jour pour un avenir plus durable.</p>
             <button class="btn-gold">Inspirez-Vous →</button>
         </div>
@@ -1732,3 +1732,4 @@
     </script>
 </body>
 </html>
+
