--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
             <div class="promo-text">
                 <h2>Savourez l'excellence à prix exceptionnel</h2>
                 <p>Profitez d'offres exclusives sur nos machines instant fondu, Original, Absolu, Créatif et Alessi. Le fromage parfait, à votre style et à votre goût.</p>
-                <p>l'appareil Capsulait : une machine élégante et intuitive qui transforme les capsules en fromage prêt à déguster.</p>
+                <p>l'appareil Instant fondu : une machine élégante et intuitive qui transforme les capsules en fromage prêt à déguster.</p>
                 <button class="btn-gold">J'en profite →</button>
             </div>
             <div class="promo-image">
@@ -1732,4 +1732,5 @@
     </script>
 </body>
 </html>
+
 
